<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/application_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/blue"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="@dimen/sp_16"
                android:src="@drawable/ic_back_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sp_12"
                android:text="@string/create_officer"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_back"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?actionBarSize">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/sp_16"
                        android:layout_marginTop="@dimen/sp_16"
                        android:layout_marginEnd="@dimen/sp_16"
                        android:text="@string/name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_16"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/name_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/sp_12"
                        android:layout_marginEnd="@dimen/sp_16"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_name"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:hint="@string/eg_nickolas"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:paddingBottom="@dimen/sp_8"
                            android:textSize="@dimen/sp_14" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/tv_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/sp_16"
                        android:layout_marginTop="@dimen/sp_10"
                        android:layout_marginEnd="@dimen/sp_16"
                        android:text="@string/gender"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_16"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/radio_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/sp_16"
                        android:layout_marginTop="@dimen/sp_10"
                        android:layout_marginEnd="@dimen/sp_16"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radio_btn_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/blue"
                            android:text="@string/male"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sp_14" />

                        <RadioButton
                            android:id="@+id/radio_btn_female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/sp_20"
                            android:buttonTint="@color/blue"
                            android:text="@string/female"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sp_14" />

                        <RadioButton
                            android:id="@+id/radio_btn_trans"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/sp_20"
                            android:buttonTint="@color/blue"
                            android:text="@string/others"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sp_14" />

                    </RadioGroup>

                    <TextView
                        android:id="@+id/tv_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/sp_16"
                        android:layout_marginTop="@dimen/sp_10"
                        android:layout_marginEnd="@dimen/sp_16"
                        android:text="@string/email"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_16"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/sp_12"
                        android:layout_marginEnd="@dimen/sp_16"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_email"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:hint="@string/something_gmail_com"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:paddingTop="@dimen/dp_2"
                            android:paddingEnd="@dimen/sp_12"
                            android:paddingBottom="@dimen/sp_8"
                            android:singleLine="true"
                            android:textSize="@dimen/sp_14" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/tv_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/sp_16"
                        android:layout_marginTop="@dimen/sp_10"
                        android:layout_marginEnd="@dimen/sp_16"
                        android:text="@string/password"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_16"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/sp_12"
                        android:layout_marginEnd="@dimen/sp_16"
                        app:endIconDrawable="@drawable/custom_password_eye"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/blue">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_password"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:hint="@string/enter_your_password"
                            android:inputType="text"
                            android:maxLength="10"
                            android:paddingTop="@dimen/dp_2"
                            android:paddingEnd="@dimen/sp_12"
                            android:paddingBottom="@dimen/sp_8"
                            android:textSize="@dimen/sp_14" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/tv_dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/sp_16"
                        android:layout_marginTop="@dimen/sp_10"
                        android:layout_marginEnd="@dimen/sp_16"
                        android:text="@string/date_of_birth"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_16"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_date"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_40"
                        android:layout_marginStart="@dimen/sp_16"
                        android:layout_marginTop="@dimen/dp_5"
                        android:layout_marginEnd="@dimen/sp_16"
                        android:backgroundTint="@color/white"
                        android:elevation="@dimen/dp_0"
                        android:visibility="gone"
                        app:cardCornerRadius="@dimen/dp_5"
                        app:cardElevation="@dimen/dp_0">

                        <EditText
                            android:id="@+id/edt_date"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/white"
                            android:drawableEnd="@drawable/ic_calender_icon"
                            android:focusable="false"
                            android:hint="@string/dd_mm_yyyy"
                            android:paddingStart="@dimen/sp_10"
                            android:paddingEnd="@dimen/sp_10"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sp_16" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/tv_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/sp_16"
                        android:layout_marginTop="@dimen/sp_10"
                        android:layout_marginEnd="@dimen/sp_16"
                        android:text="@string/contact_number"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_16"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/mobile_number_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/sp_12"
                        android:layout_marginEnd="@dimen/sp_16"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_mobile_number"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:hint="@string/_98765_43210"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLength="10"
                            android:paddingTop="@dimen/dp_2"
                            android:paddingEnd="@dimen/sp_12"
                            android:paddingBottom="@dimen/sp_8"
                            android:textSize="@dimen/sp_14" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/tv_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/sp_16"
                        android:layout_marginTop="@dimen/sp_10"
                        android:layout_marginEnd="@dimen/sp_16"
                        android:text="@string/address"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_16"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/address_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/sp_12"
                        android:layout_marginEnd="@dimen/sp_16"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_address"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:hint="@string/eg_coimbatore"
                            android:imeOptions="actionNext"
                            android:inputType="textMultiLine"
                            android:maxLines="8"
                            android:minLines="5"
                            android:paddingTop="@dimen/dp_2"
                            android:paddingEnd="@dimen/sp_12"
                            android:paddingBottom="@dimen/sp_8"
                            android:textSize="@dimen/sp_14" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_register"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/sp_20"
            android:layout_marginBottom="@dimen/sp_16"
            android:background="@drawable/button_background"
            android:text="@string/create_officer"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_300"
            android:padding="@dimen/dp_15"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/progress_login"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:indeterminateTint="@color/blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>