<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/sp_10">

        <LinearLayout
            android:id="@+id/linear_complaint"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/sp_12"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/complaint"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/complaint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sp_10"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sp_12"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sp_10"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sp_12"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_book_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/complaint_status"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/complaint_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sp_10"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:textSize="@dimen/sp_14" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/sp_16"
            android:background="@color/blue" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>